tests/fixtures/errors/valtype_cycle.z
# A record containing itself by value cannot lay out.
Knot: record {
    again: Knot
}

main: function is {
    k9: (Option.none Knot)
    match (
        k9
    ) case some then {
        print "some"
    } case none then {
        print "none"
    }
}
